:memo: docs(core): Add more docs

--- a/docs/todo/v1.md
+++ b/docs/todo/v1.md
@@ -1,5 +1,5 @@
 # TO-DO LIST FOR VERSION 1
 
-- [ ] Enable flags for override prompt results.
-- [ ] Fix create Template for work without template keys.
-- [ ] Add in the core class more public methods
+- [x] Enable flags for override prompt results.
+- [x] Fix create Template for work without template keys.
+- [x] Add in the core class more public methods
